--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.css'>
         <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap-grid.css'>
         <link rel="stylesheet" href="https://use.fontawesome.com/6409746a8b.css">
-        <link rel='stylesheet' href='/styles.css'>
+        <link rel='stylesheet' href='/functional-language-demo/styles.css'>
     </head>
     <body>
         <div class='container'>
@@ -80,8 +80,8 @@
             </div>
         </div>
     </body>
-    <script type='text/javascript' src='/lang.js'></script>
-    <script type='text/javascript' src='/main.js'></script>
+    <script type='text/javascript' src='/functional-language-demo/lang.js'></script>
+    <script type='text/javascript' src='/functional-language-demo/main.js'></script>
 </html>
 
 
